--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -243,6 +243,7 @@ $button-size: 1.5rem;
 			@include grid(12,6);
 			@include prefix(12,0);
 			@include suffix(12,0);
+		text-align: justify;
 		}
 		@media #{$x-large} {
 			@include grid(12,4.5);
